2012-02-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-history.txt:
	* data/tdict-spell.txt:
	* data/tdict-common.txt: Add words.

	* data/tdict-geo.txt: Fix typo.

2012-02-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-history.txt:
	* data/tdict-proper.txt:
	* data/tdict-city.txt:
	* data/tdict-science.txt:
	* data/tdict-geo.txt:
	* data/tdict-ict.txt:
	* data/tdict-spell.txt:
	* data/tdict-district.txt:
	* data/tdict-common.txt: Add words.

2012-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (th_brk): Handle Thai acronyms by detecting
	groups of <= 3 Thai characters + '.'. Thanks John Tapsell for
	the report and initial patch.

2012-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thrend/thrend.c (th_render_cell_): Reformat source a little bit.

2012-01-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-proper.txt:
	* data/tdict-city.txt:
	* data/tdict-science.txt:
	* data/tdict-ict.txt:
	* data/tdict-common.txt: Add words.

	* data/tdic-proper.txt, data/tdict-history.txt: Move "ศรีวิชัย" to
	-history.

2012-01-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.1.16 ===

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in:
	  - Remove remaining '$Id'.
	  - Remove unnecessary AC_SUBST(VERSION).

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* -TODO: Removed, the plan is obsolete.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* README: Update project URL & e-mail.
	* configure.in: Use googlegroups as bug report address.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Add bug report address.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-history.txt:
	* data/tdict-proper.txt: